@@ -1,0 +1,3 @@
+class UserMigrationException(Exception):
+    """An error occured during user migration.
+    """
